# opinion-matters

./: .gitignore  ARCIUM_ANALYSIS.md  ARCIUM_COMPARISON.md  ARCIUM_COMP_DEF_ISSUE.md  ARCIUM_DEVNET_ISSUE.md  ARCIUM_MPC_SOLUTION.md  ARCIUM_SETUP_NOTES.md  Anchor.toml  Arcium.toml  BUILD_LOG.md  COMMANDS.md  CURRENT_STATUS.md  CYBERPUNK_ENHANCEMENTS.md  DEBUGGING_X25519_ERROR.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  ENCRYPTION_FIX.md  ENCRYPTION_FIX_COMPLETE.md  ERROR_MESSAGES_FIXED.md  FINAL_INTEGRATION_STATUS.md  FINAL_STATUS.md  FIXES_APPLIED.md  FIXES_NEEDED.md  FRONTEND_INTEGRATION.md  GITIGNORE_FIXED.md  HACKATHON_ASSESSMENT.md  INTEGRATION_COMPLETE.md  LOCALNET_SETUP.md  MXE_INITIALIZATION_GUIDE.md  MXE_INITIALIZED.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_ARCIUM.md  STATUS.md  SUCCESS_SUMMARY.md  check-comp-def.ts  derive-mxe.ts  package.json  tsconfig.json
.devcontainer/: devcontainer.json  setup.sh
app/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/scripts/: ## ​Basic Deployment  ### ​Initialize Your Computation Definit  Skip to main content  arcium-direct-init.ts  clear-db.ts  cluster-scan.ts  (+14 more)
docs/: PRD.md
encrypted-ixs/: resolve_market.rs
programs/private-markets/: Arcium.toml  Cargo.toml
programs/private-markets/encrypted-ixs/: batch_clear.rs  private_trade.rs
programs/private-markets/src/: constants.rs  error.rs  lib.rs  state.rs
programs/private-markets/src/instructions/: apply_batch_clear.rs  create_market.rs  deposit_collateral.rs  mint_outcome_tokens.rs  mod.rs  redeem_tokens.rs  resolve_market.rs  stake_resolver.rs  submit_attestation.rs  submit_batch_order.rs  submit_private_trade.rs  update_cfmm_state.rs
scripts/: README.md  find-fee-pool.ts  init-comp-defs.ts  mxe-diagnostic.ts
sdk/: README.md  package.json
tests/: deployment-test.ts  private-markets.ts
(+33 files in other folders)
