[package]
name = "private-markets"
version = "0.1.0"
description = "Private Prediction Markets with Arcium MPC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_markets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "arcium-anchor/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
arcium-client = { version = "0.4.0", default-features = false }
arcium-macros = { version = "0.4.0" }
arcium-anchor = { version = "0.4.0" }

[dev-dependencies]
# Commented out due to yanked dependency issue
# solana-program-test = "1.18"
# solana-sdk = "1.18"
